samples/_failures_safe/1761369572_ebffd1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_810694aa.c: In function ‘main’:
./samples/SAFE/__tmp_810694aa.c:181: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_810694aa.c:180:5: error: expected declaration or statement at end of input
  180 |     if
      |     ^~
